WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267385
[scroll-anchoring] Have invalidateAnchorElement use dequeueScrollableAreaForScrollAnchoringUpdate
https://bugs.webkit.org/show_bug.cgi?id=267385
Summary
[scroll-anchoring] Have invalidateAnchorElement use dequeueScrollableAreaForS...
Nikos Mouchtaris
Reported
2024-01-10 17:42:39 PST
[scroll-anchoring] Have invalidateAnchorElement use dequeueScrollableAreaForScrollAnchoringUpdate
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-10 17:43:32 PST
<
rdar://problem/120817486
>
Nikos Mouchtaris
Comment 2
2024-01-10 17:45:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22636
EWS
Comment 3
2024-01-11 10:57:31 PST
Committed
272927@main
(28b9240cb45c): <
https://commits.webkit.org/272927@main
> Reviewed commits have been landed. Closing PR #22636 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug