Cherry-pick 28b9240cb45c. rdar://120817486

[scroll-anchoring] Have invalidateAnchorElement use dequeueScrollableAreaForScrollAnchoringUpdate
    https://bugs.webkit.org/show_bug.cgi?id=267385
    rdar://120817486

    Reviewed by Wenson Hsieh.

    Have ScrollAnchoringController::invalidateAnchorElement use
    dequeueScrollableAreaForScrollAnchoringUpdate rather than
    queueScrollableAreaForScrollAnchoringUpdate. This was a benign issue due to
    the m_isQueuedForScrollPositionUpdate flag but we don't want to have scrollable
    areas in the set that don't require updates.

    * Source/WebCore/page/scrolling/ScrollAnchoringController.cpp:
    (WebCore::ScrollAnchoringController::invalidateAnchorElement):

    Canonical link: https://commits.webkit.org/272927@main

Canonical link: https://commits.webkit.org/272448.213@safari-7618-branch